--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,12 +208,13 @@ header {
 }
 
 .section-aboutus--rigth {
-    width: 520px;
+    width: 470px;
     text-align: center;
+    padding-left: 20px;
 }
 
-.section-aboutus--rigth img {
-    width: 480px;
+.section-aboutus--rigth video {
+    width: 450px;
     box-shadow: 0px 5px 20px black;
 }
 
@@ -228,4 +229,135 @@ header {
     padding: 10px 35px;
     margin-top: 20px;
     border-radius: 20px;
+}
+
+.section-aboutus--left p {
+    font-size: 14px;
+    line-height: 25px;
+}
+
+.section-services {
+    display: flex;
+}
+
+.section-service {
+    flex: 1;
+    text-align: center;
+    border-right: 1px solid #333;
+    padding: 20px;
+}
+
+.section-service:first-child {
+    border-left: 1px solid #333;
+}
+
+.section-service h4 {
+    text-transform: uppercase;
+    line-height: 25px;
+    margin-top: 20px;
+    font-size: 18px;
+}
+
+.section-service p {
+    color: #999;
+    line-height: 25px;
+    font-size: 14px;
+}
+
+.section-service #p2 {
+    padding-top: 18px;
+}
+
+.section-projects {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.section-projects--filters {
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    text-align: center;
+    display: inline-block;
+    padding: 0px 20px;
+}
+
+.section-projects--filters ul,
+.section-projects--filters li {
+    list-style: none;
+    display: inline-block;
+}
+
+.section-projects--filters li {
+    padding: 10px;
+    text-transform: uppercase;
+    font-size: 13px;
+    border-left: 1px solid #ccc;
+    color: #444;
+    border-bottom: 2px solid transparent;
+    cursor: pointer;
+}
+
+.section-projects--filters li:hover,
+.section-projects--filters li.active {
+    border-bottom: 2px solid #b28756;
+}
+
+.section-projects--filters li:first-child {
+    border-left: 0;
+}
+
+.section-projects--photos {
+    width: 100vw;
+    max-width: 1540px;
+    margin-top: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 20px;
+}
+
+.section-projects--photo {
+    width: 380px;
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+.sections-projects--photoarea {
+    margin: 10px;
+}
+
+.sections-projects--photoarea img {
+    height: 210px;
+    width: 360px;
+}
+
+.section-projects--photoinfo {
+    position: absolute;
+    width: 360px;
+    height: 210px;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+}
+
+.section-projects--photoinfo h5 {
+    font-size: 18px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.sections-projects--photoarea:hover .section-projects--photoinfo {
+    display: flex;
+    cursor: pointer;
+}
+
+.unica {
+    width: 360px;
+    height: 210px;
 }
